# lcheck

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: license.rs  main.rs  spdx.rs
src/languages/: common.rs  mod.rs  python.rs
