[package]
name = "lcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
colored = "3.0.0"
itertools = "0.14.0"
pyproject-toml = "0.13.4"
regex = "1.11.1"
reqwest = { version = "*", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "*", features = ["full"] }
toml = "0.8.20"
